init variables.css token

--- a/style/scss/_variables.scss
+++ b/style/scss/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Fri, 28 Oct 2022 08:21:13 GMT
+// Generated on Fri, 28 Oct 2022 09:57:45 GMT
 
 $adr-color-text-normal: #1d2939;
 $adr-color-text-white: #fcfcfd;
@@ -20,24 +20,35 @@ $adr-color-border-button-secondary: #fcfcfd;
 $adr-color-border-gray: #98a2b3;
 $adr-color-border-link: #b2ddff;
 $adr-color-border-disable: #98a2b3;
-$adr-shape-button-primary-radius: 100;
-$adr-shape-button-outlined-radius: 100;
-$adr-shape-button-text-radius: 100;
-$adr-shape-button-pad-side: 24;
-$adr-shape-button-pad-top: 8;
-$adr-shape-button-pad-top-variation: 12;
-$adr-shape-button-gap: 8;
-$adr-shape-button-border: 2;
-$adr-shape-sidebar-radius: 12;
-$adr-shape-sidebar-gap: 8;
-$adr-shape-sidebar-pad-all: 4;
-$adr-shape-sidebar-pad-side: 16;
-$adr-shape-input-checkbox-radius: 4;
-$adr-shape-input-chips-radius: 4;
-$adr-shape-input-field-radius: 4;
-$adr-shape-display-cards-radius: 12;
-$adr-shape-display-dialogs-radius: 28;
-$adr-shape-display-tabs-radius: 8;
+$adr-size-button-primary-radius: 100rem;
+$adr-size-button-outlined-radius: 100rem;
+$adr-size-button-text-radius: 100rem;
+$adr-size-button-pad-side: 24rem;
+$adr-size-button-pad-top: 8rem;
+$adr-size-button-pad-top-variation: 12rem;
+$adr-size-button-gap: 8rem;
+$adr-size-button-border: 2rem;
+$adr-size-sidebar-radius: 12rem;
+$adr-size-sidebar-gap: 8rem;
+$adr-size-sidebar-pad-all: 4rem;
+$adr-size-sidebar-pad-side: 16rem;
+$adr-size-input-checkbox-radius: 4rem;
+$adr-size-input-chips-radius: 4rem;
+$adr-size-input-field-radius: 4rem;
+$adr-size-display-cards-radius: 12rem;
+$adr-size-display-dialogs-radius: 28rem;
+$adr-size-display-tabs-radius: 8rem;
+$adr-size-font-size-12: 12rem;
+$adr-size-font-size-14: 14rem;
+$adr-size-font-size-16: 16rem;
+$adr-size-font-size-18: 18rem;
+$adr-size-font-size-20: 20rem;
+$adr-size-font-size-24: 24rem;
+$adr-size-font-size-30: 30rem;
+$adr-size-font-size-36: 36rem;
+$adr-size-font-size-48: 48rem;
+$adr-size-font-size-60: 60rem;
+$adr-size-font-size-72: 72rem;
 $adr-typo-h1-font-family: Inter;
 $adr-typo-h1-font-weight: 600;
 $adr-typo-h1-line-height: 38;
